# AmebaPro2_SDK_v9.0a

./: README.md  release_note.txt
component/at_cmd/: atcmd_bt.c  atcmd_ftl.c  atcmd_isp.c  atcmd_lwip.c  atcmd_mp.c  atcmd_mp_ext2.c  atcmd_sys.c  atcmd_wifi.c  log_service.c
component/bluetooth/driver/hci/: hci_if_rtk.c
component/bluetooth/os/freertos/: osif_freertos.c
component/example/aiagent/: aiagent.cmake  app_example.c  example_aiagent.c  example_aiagent.h  libaiagent.cmake
component/example/aiagent/aiagent_src/: agent_test.cpp  agent_test.h
component/example/amazon_freertos/: amazon_freertos.cmake  example_amazon_freertos.c  libaws_freertos_lts.cmake  readme.md
component/example/audio_helix_aac/: app_example.c  example_audio_helix_aac.c
component/example/audio_helix_mp3/: example_audio_helix_mp3.c
component/example/audio_loop/: example_audio_loop.c  example_audio_loop.h
component/example/audio_opus_encode/: example_audio_opus_encode.c
component/example/cJSON/: example_cJSON.c
component/example/cpp_test/: app_example.c  cpp_test.cmake  example_cpp_test.c  example_cpp_test.h  test.cpp  test.h
component/example/fatfs/: example_fatfs.c
component/example/http_client/: example_http_client.c
component/example/kvs_producer_mmf/: example_kvs_producer_mmf.c  module_kvs_producer.c  module_kvs_producer.h  readme.md
component/example/kvs_webrtc_mmf/: app_example.c  example_kvs_webrtc_mmf.c  example_kvs_webrtc_playback_mmf.c  kvs_webrtc_mmf.cmake  module_kvs_webrtc.c  module_kvs_webrtc.h  readme.md  sample_config_webrtc.h
component/example/kvs_webrtc_mmf/webrtc_app_src/: AppCommon.c  (+8 more)
component/example/littlefs/: example_littlefs.c
component/example/mcast/: example_mcast.c
component/example/media_framework/: example_media_framework.c  media_framework.cmake  mmf2_example_2way_audio_init.c  mmf2_example_2way_audio_opus_init.c  mmf2_example_a_init.c  mmf2_example_a_opus_init.c  mmf2_example_aacloop_init.c  mmf2_example_array_rtknn_init.c  mmf2_example_audioloop_init.c  mmf2_example_g711loop_init.c  mmf2_example_opusloop_init.c  mmf2_example_rtp_aad_init.c  mmf2_example_rtp_opusd_init.c
component/example/media_mp4_demuxer/: example_media_mp4_demuxer.c
component/example/media_uvcd/: example_media_uvc.c  example_media_uvcd.h
component/example/mqtt/: example_mqtt.c
component/example/nonblock_connect/: example_nonblock_connect.c
component/example/ota_http/: example_ota_http.c
component/example/qr_code_scanner/: example_qr_code_scanner.c
component/example/sd_hotplug/: example_sd_hot_plug.c
component/example/secure_storage/: example_secure_storage_ns.c  example_secure_storage_s.c
component/example/ssl_download/: example_ssl_download.c
component/example/ssl_server/: example_ssl_server.c  example_ssl_server_mbedtls_dtls.c
component/example/std_file/: example_std_file.c
component/example/usb_mass_storage/: example_usb_msc.c
component/example/wlan_scenario/: app_example.c  example_wlan_scenario.c
component/example/xml/: example_xml.c  xml.cmake
component/file_system/fatfs/: fatfs_ramdisk_api.c  fatfs_ramdisk_api.h  fatfs_sdcard_api.c  fatfs_sdcard_api.h
component/file_system/ftl_common/: ftl_common_api.c  ftl_nand_api.c  ftl_nand_api.h  ftl_nor_api.c
component/file_system/fwfs/: fwfs.c  fwfs.h
component/file_system/littlefs/: lfs_nand_flash_api.c  lfs_nor_flash_api.c
component/file_system/system_data/: system_data_api.c
component/file_system/vfs/: vfs.c  vfs.h  vfs_fatfs.c  vfs_littlefs.c
component/lwip/api/: lwip_netconf.c  lwip_netconf.h  lwipopts.h
component/mbed/hal/: rtc_api.h
component/mbed/hal_ext/: i2s_api.h  power_mode_api.h  snand_api.h  sys_api.h
component/media/mmfv2/: mmf2_dbg.h  module_aad.c  module_array.c  module_array.h  module_audio.c  module_audio.h  module_demuxer.c  module_facerecog.c  module_fileloader.c  module_filesaver.c  module_mbnssd.c  module_md.c  module_mp4.c  module_mp4.h  module_rtknn.c  module_video.c  module_video.h  module_vipnn.c  module_vipnn.h
component/media/muxer/: mp4_demuxer.h  mp4_muxer.h
component/media/rtp_codec/: avcodec.h
component/network/iperf/: iperf.c
component/network/ping/: ping_test.c
component/network/rtsp/: rtsp_api.c
component/os/freertos/: freertos_heap5_config.c  freertos_service.c  freertos_service.h
component/os/os_dep/: osdep_service.c
component/ssl/ssl_func_stubs/: ssl_func_stubs.c
component/stdlib/: platform_stdlib.h
component/video/osd2/: isp_osd_example.c
component/wifi/api/: wifi_conf.c  wifi_conf.h  wifi_conf_ext.c  wifi_conf_inter.c  wifi_conf_wowlan.c  wlan_network.c
component/wifi/promisc/: wifi_conf_promisc.c
component/wifi/wifi_config/: wifi_simple_config.c  wifi_simple_config_crypto.c  wifi_simple_config_parser.c
component/wifi/wifi_fast_connect/: wifi_fast_connect.c
doc/: NN_AI_Agent_README.md  NN_Yolo_plus_YAMNet_README.md  NN_audio_example_README.md  NN_example_README.md  NN_file_tester_README.md
project/realtek_amebapro2_v0_example/GCC-RELEASE/: CMakeLists.txt  config.cmake  includepath.cmake  toolchain.cmake  toolchain_picolibc.cmake
project/realtek_amebapro2_v0_example/GCC-RELEASE/ROM/GCC/: rtl8735b_boot.ld  rtl8735b_ram.ld  rtl8735b_ram_ns.ld  rtl8735b_ram_s.ld  rtl8735b_s.ld
project/realtek_amebapro2_v0_example/GCC-RELEASE/ai_agent/: CMakeLists.txt  rtl8735b_ai_agent.ld
project/realtek_amebapro2_v0_example/GCC-RELEASE/application/: CMakeLists.txt  application.cmake  rtl8735b_ram.ld  rtl8735b_ram_ns.ld  rtl8735b_ram_s.ld  rtl8735b_ram_xip.ld
project/realtek_amebapro2_v0_example/GCC-RELEASE/mp/: amebapro2_ai_agent.json  amebapro2_bootloader.json  amebapro2_firmware.json  amebapro2_firmware_ntz.json  amebapro2_firmware_tz.json  amebapro2_fwfs_nn_models.json  amebapro2_fwfs_nn_models_nn2.json  amebapro2_isp_iq.json  amebapro2_nn_model.json  amebapro2_partitiontable.json  elf2bin.linux  encrypt_bl.json  encrypt_fw.json  encrypt_fw_tz.json  fw_gen.sh
project/realtek_amebapro2_v0_example/inc/: FreeRTOSConfig.h  build_info.h  platform_opts.h
project/realtek_amebapro2_v0_example/src/: main.c  main_s.c
(+208 files in other folders)
